Compil/FinalProject/gen/TP2Parser.java
// Generated from /home/mohammedi/OpenSourceProjects/master1-sii-assignements/Compil/FinalProject/src/TP2.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TP2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, INTcompil=9, 
		FLOATcompil=10, SCANcompil=11, PRINTcompil=12, CASE=13, ARROW=14, BREAK=15, 
		START=16, IF=17, THEN=18, ELSE=19, ENDIF=20, MATCH=21, FOR=22, WHILE=23, 
		PLUS=24, MINUS=25, MULT=26, DIV=27, SUP=28, INF=29, PROGNAME=30, ID=31, 
		INT=32, FLOAT=33, COMMENT=34, TEXT=35, WS=36;
	public static final int
		RULE_start_rule = 0, RULE_declarations = 1, RULE_suite = 2, RULE_variables = 3, 
		RULE_identifier = 4, RULE_type = 5, RULE_instructions = 6, RULE_instAff = 7, 
		RULE_instIf = 8, RULE_instElse = 9, RULE_instScan = 10, RULE_instPrint = 11, 
		RULE_instFor = 12, RULE_instWhile = 13, RULE_instCase = 14, RULE_cases = 15, 
		RULE_condition = 16, RULE_si = 17, RULE_expression = 18, RULE_expression1 = 19, 
		RULE_pm = 20, RULE_md = 21, RULE_expression2 = 22, RULE_value = 23;
	public static final String[] ruleNames = {
		"start_rule", "declarations", "suite", "variables", "identifier", "type", 
		"instructions", "instAff", "instIf", "instElse", "instScan", "instPrint", 
		"instFor", "instWhile", "instCase", "cases", "condition", "si", "expression", 
		"expression1", "pm", "md", "expression2", "value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'compil'", "'('", "')'", "'{'", "'}'", "';'", "','", "'='", "'intCompil'", 
		"'floatCompil'", "'scancompil'", "'printcompil'", "'case'", "'=>'", "'break'", 
		"'start'", "'if'", "'then'", "'else'", "'endif'", "'match'", "'for'", 
		"'while'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, "INTcompil", "FLOATcompil", 
		"SCANcompil", "PRINTcompil", "CASE", "ARROW", "BREAK", "START", "IF", 
		"THEN", "ELSE", "ENDIF", "MATCH", "FOR", "WHILE", "PLUS", "MINUS", "MULT", 
		"DIV", "SUP", "INF", "PROGNAME", "ID", "INT", "FLOAT", "COMMENT", "TEXT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TP2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TP2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Start_ruleContext extends ParserRuleContext {
		public TerminalNode PROGNAME() { return getToken(TP2Parser.PROGNAME, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public Start_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterStart_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitStart_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitStart_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_ruleContext start_rule() throws RecognitionException {
		Start_ruleContext _localctx = new Start_ruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__0);
			setState(49);
			match(PROGNAME);
			setState(50);
			match(T__1);
			setState(51);
			match(T__2);
			setState(52);
			match(T__3);
			setState(53);
			declarations();
			setState(54);
			match(START);
			setState(55);
			instructions();
			setState(56);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(58);
				suite();
				setState(59);
				declarations();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				suite();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SuiteContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SuiteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_suite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterSuite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitSuite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitSuite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuiteContext suite() throws RecognitionException {
		SuiteContext _localctx = new SuiteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_suite);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			type();
			setState(65);
			variables();
			setState(66);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TP2Parser.ID, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitVariables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitVariables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variables);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				{
				setState(68);
				match(ID);
				setState(69);
				match(T__6);
				setState(70);
				variables();
				}
				}
				break;
			case 2:
				{
				setState(71);
				match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TP2Parser.ID, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INTcompil() { return getToken(TP2Parser.INTcompil, 0); }
		public TerminalNode FLOATcompil() { return getToken(TP2Parser.FLOATcompil, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !(_la==INTcompil || _la==FLOATcompil) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public InstAffContext instAff() {
			return getRuleContext(InstAffContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstIfContext instIf() {
			return getRuleContext(InstIfContext.class,0);
		}
		public InstScanContext instScan() {
			return getRuleContext(InstScanContext.class,0);
		}
		public InstPrintContext instPrint() {
			return getRuleContext(InstPrintContext.class,0);
		}
		public InstForContext instFor() {
			return getRuleContext(InstForContext.class,0);
		}
		public InstWhileContext instWhile() {
			return getRuleContext(InstWhileContext.class,0);
		}
		public InstCaseContext instCase() {
			return getRuleContext(InstCaseContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instructions);
		int _la;
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				instAff();
				setState(79);
				match(T__5);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(80);
					instructions();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				instIf();
				setState(84);
				match(T__5);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(85);
					instructions();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				instScan();
				setState(89);
				match(T__5);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(90);
					instructions();
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				instPrint();
				setState(94);
				match(T__5);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(95);
					instructions();
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				instFor();
				setState(99);
				match(T__5);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(100);
					instructions();
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				instWhile();
				setState(104);
				match(T__5);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(105);
					instructions();
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(108);
				instCase();
				setState(109);
				match(T__5);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANcompil) | (1L << PRINTcompil) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
					{
					setState(110);
					instructions();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstAffContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InstAffContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instAff; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstAff(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstAff(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstAff(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstAffContext instAff() throws RecognitionException {
		InstAffContext _localctx = new InstAffContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instAff);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			identifier();
			setState(116);
			match(T__7);
			setState(117);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(TP2Parser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(TP2Parser.THEN, 0); }
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(TP2Parser.ELSE, 0); }
		public TerminalNode ENDIF() { return getToken(TP2Parser.ENDIF, 0); }
		public InstIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstIfContext instIf() throws RecognitionException {
		InstIfContext _localctx = new InstIfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(IF);
			setState(120);
			match(T__1);
			setState(121);
			condition();
			setState(122);
			match(T__2);
			setState(123);
			match(THEN);
			setState(124);
			instructions();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(125);
				match(ELSE);
				setState(126);
				instructions();
				setState(127);
				match(ENDIF);
				setState(128);
				match(T__5);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstElseContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(TP2Parser.ELSE, 0); }
		public InstElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstElse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstElseContext instElse() throws RecognitionException {
		InstElseContext _localctx = new InstElseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instElse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(ELSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstScanContext extends ParserRuleContext {
		public TerminalNode SCANcompil() { return getToken(TP2Parser.SCANcompil, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public InstScanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instScan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstScan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstScan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstScan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstScanContext instScan() throws RecognitionException {
		InstScanContext _localctx = new InstScanContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_instScan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(SCANcompil);
			setState(135);
			match(T__1);
			setState(136);
			variables();
			setState(137);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstPrintContext extends ParserRuleContext {
		public TerminalNode PRINTcompil() { return getToken(TP2Parser.PRINTcompil, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(TP2Parser.TEXT, 0); }
		public InstPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instPrint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstPrintContext instPrint() throws RecognitionException {
		InstPrintContext _localctx = new InstPrintContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_instPrint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(PRINTcompil);
			setState(140);
			match(T__1);
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(141);
				variables();
				}
				break;
			case TEXT:
				{
				setState(142);
				match(TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(145);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(TP2Parser.FOR, 0); }
		public List<InstAffContext> instAff() {
			return getRuleContexts(InstAffContext.class);
		}
		public InstAffContext instAff(int i) {
			return getRuleContext(InstAffContext.class,i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstForContext instFor() throws RecognitionException {
		InstForContext _localctx = new InstForContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_instFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(FOR);
			setState(148);
			match(T__1);
			setState(149);
			instAff();
			setState(150);
			match(T__5);
			setState(151);
			condition();
			setState(152);
			match(T__5);
			setState(153);
			instAff();
			setState(154);
			match(T__2);
			setState(155);
			match(T__3);
			setState(156);
			instructions();
			setState(157);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(TP2Parser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instWhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TP2Visitor ) return ((TP2Visitor<? extends T>)visitor).visitInstWhile(this);
			else return visitor.visitChildren(this);
		}
	}
